--- a/css/body.css
+++ b/css/body.css
@@ -2,4 +2,20 @@ body
 {
     color: brown;
     font-family: fantasy;
+    text-align: center;
+    font-size: 20px;
+    margin: 0;
+    padding: 0;
+}
+#container 
+{
+    width: 70%;
+    padding: 1em;
+    text-align: center;
+    border: 1px solid cornsilk;
+}
+
+#container h1
+{
+    font-size: 20px;
 }
