--- a/css/body.css
+++ b/css/body.css
@@ -1,5 +1,6 @@
 body
 {
+    background, #1e1f24;
     color: rgb(255, 11, 11);
     font-family: fantasy;
     text-align: center;
@@ -10,12 +11,18 @@ body
 
 #cabecera
 {
-    background: chocolate;
+    background: ("../imagenes/dragon.png") no-repeat center center;
     box-shadow: 0px 5px 30px 0px rgba(0,0, 0, 0.75);
     color: white;
     font-weight: bold;
     margin: 0;
-    padding: 0.5em;
+    padding: 0.5em 0 0.5em 2em;
+}
+
+#cabecera #logo
+{
+    width: 20px;
+    vertical-align: middle;
 }
 
 #cabecera #tagline
@@ -36,4 +43,9 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post
+{
+    background: white;
+    padding: 1em;
 }
